2006-10-10  Akim Demaille  <demaille@gostai.com>

	uparse.cc.
	* parser/uparser.cc: New.
	* parser/uparser.h, Makefile.am: Adjust.

2006-10-10  Akim Demaille  <demaille@gostai.com>

	* network/bsdnet/network.h, network/bsdnet/network.cc, 
	* uconnection.cc, ucommand.cc: Formatting changes.

2006-10-09  Akim Demaille  <akim@lrde.epita.fr>

	pin baux.
	* Makefile.am: And include build-aux.mk.

2006-10-08  JC Baillie  <baillie@gostai.com>

	first stage of object arrays (can create) 

The goal is be able to do things like:

myobj[1] = new stuff;
myobj[1].val = 4;

For the moment, only the first stage is possible with this commit.
To reach the second stage (which requires a modification of the grammar), you
can do this:

myobj__1.val = 4; //or
$("myobj__"+string(index)+".val") = 4;


	* ucommand.cc: tweak UCommand_NEW to support any object name.
	* ucommand.h: change constructor.
	* parser/bison/ugrammar.y: update with new UCommand_NEW constructor.

2006-10-08  JC Baillie  <baillie@gostai.com>

	Prepare for multievent handling 

Multievent handling needs a new class UEventHandler.

	* ucommand.cc: include uventhandler.h.
	* utypes.h: nothing.
	* ueventhandler.h: New.
	* ueventhandler.cc: New.
	* Makefile.am: add .cc and .h for ueventhandler.

2006-10-08  JC Baillie  <baillie@gostai.com>

	fix 'new' behavior when no init is present and no parameters are given 

When invoquing new with no parameters, the default "empty" constructor is now called,
even if the init function has not been explicitly declared.

	* ucommand.cc: fix UCommand_NEW behavior when new has no param and no init is defined.

2006-10-08  JC Baillie  <baillie@gostai.com>

	no recursive inheritance 

	* ucommand.cc: fix a=new a; this is not permitted.

2006-10-08  Type Your Name Here  <your.mail.here@fixme.com>

	Name resolution fix in object methods + akim bug in booleval reverted 

Some cleanup of warning messages during compile.